funcion de generar color en js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</header>
 
 	<main>
-		<section class="palete-picker margin20">
+		<section class="pallete-picker margin20">
 
 			<nav>
 				<ul>
@@ -23,11 +23,15 @@
 					<li>Complementario</li>
 					<li>Monocromático</li>
 					<li>Trádico</li>
-					<button>Generar</button>
+					<button onclick="updatePallete()">Generar</button>
 				</ul>
 			</nav>
 
 			<h3>Paleta de colores</h3>
+
+				<div>
+					<div id="palleteContainer"></div>
+				</div>
 
 
 		</section>
